[project]
name = "ftn"
description = "ftn"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
authors = [ { name = "Nick Brown" } ]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "xdsl@git+https://github.com/xdslproject/xdsl@main"
]

dynamic = [ "version" ]

[project.optional-dependencies]
dev=[]

[project.scripts]
ftn-opt = "ftn.tools.ftn_opt:main"

[tool.setuptools]
platforms = ["Linux", "Mac OS-X", "Unix"]
zip-safe = false

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pyright]
# We need this for TypeForm, should remove it once that's in
enableExperimentalFeatures = true

exclude = [ "examples" ]
include = [ "ftn" ]
